<resources>
    <string name="app_name">HealthRecord</string>
    <string name="signout">Signout</string>
    <string name="personal_info">Personal Info</string>
    <string name="medical_records">Medical Records</string>
    <string name="leave_application">Leave Application</string>
    <string name="labs">Labs</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="add_your_details">Add your details</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="name">Name: </string>
    <string name="userType">UserType</string>
    <string name="pref">pref</string>
    <string name="enter_patient_email">Enter patient email</string>
    <string name="enter_disease">Enter disease</string>
    <string name="symtoms">Symtoms</string>
    <string name="add_symptoms">Add Symptoms</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine">Medicine</string>
    <string name="add_test_details">Add Test Details</string>
    <string name="result">Result</string>
    <string name="test_name">Test Name</string>
    <string name="positive">+ve</string>
    <string name="negative">-ve</string>
    <string name="add_leave_details">Add Leave details</string>
    <string name="enter_doctor_email">Enter Doctor email</string>
    <string name="enter_faculty_email">Enter Faculty Email</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="disease">Disease</string>
    <string name="date">date</string>
    <string name="patient_email">patient email</string>
    <string name="doctor_email">doctor email</string>
    <string name="symptoms">Symptoms</string>
    <string name="student_email">Student Email</string>
    <string name="faculty_email">Faculty Email</string>
    <string name="dates">Dates</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="phone_number">Phone No:</string>
    <string name="specialization">Specialization:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="enter_height">Enter Height in cms</string>
    <string name="enter_weight">Enter weight in kgs</string>
    <string name="bmi">BMI:</string>
</resources>
