<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLabTestResult">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_test_details"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="50dp"
        android:id="@+id/alt_title"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:hint="@string/enter_patient_email"
        android:layout_below="@+id/alt_title"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:id="@+id/alt_email"
        android:importantForAutofill="no"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:hint="@string/test_name"
        android:layout_below="@+id/alt_email"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:id="@+id/alt_testname"
        android:importantForAutofill="no"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:layout_below="@+id/alt_testname"
        android:layout_marginTop="30dp"
        android:text="@string/result"
        android:layout_marginHorizontal="50dp"
        android:id="@+id/alt_result"
        android:textOff="@string/negative"
        android:textOn="@string/positive"
        android:showText="true"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/alt_result"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/alt_submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>


</RelativeLayout>