<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDetailsActivity"
    android:id="@+id/ayd_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/title"
        android:text="@string/add_your_details"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/firstName"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/first_name"
        android:layout_below="@+id/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/lastName"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/last_name"
        android:layout_below="@+id/firstName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/addresss"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/address"
        android:layout_below="@+id/lastName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/mobNumber"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/mobile_number"
        android:layout_below="@+id/addresss"
        android:inputType="phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/height"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/enter_height"
        android:layout_below="@+id/mobNumber"
        android:inputType="numberDecimal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/weight1"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/enter_weight"
        android:layout_below="@+id/height"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_below="@+id/weight1"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>