<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/student_email"
        android:id="@+id/la_s_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dates"
        android:id="@+id/la_dates"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/doctor_email"
            android:id="@+id/la_d_email"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="15sp"
            android:id="@+id/la_d_approve"
            android:text="@string/submit"
            android:layout_marginHorizontal="10dp"/>

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="15sp"
            android:id="@+id/la_d_toggle"
            android:textOff="@string/reject"
            android:textOn="@string/accept"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/la_d_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/faculty_email"
            android:id="@+id/la_f_email"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="15sp"
            android:id="@+id/la_f_approve"
            android:layout_marginHorizontal="10dp"
            android:text="@string/submit"/>


        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="15sp"
            android:id="@+id/la_f_toggle"
            android:textOff="@string/reject"
            android:textOn="@string/accept"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/la_f_text"/>
    </LinearLayout>
</LinearLayout>
