<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ml_disease"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:text="@string/disease"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ml_date"
        android:layout_alignParentEnd="true"
        android:text="@string/date"
        android:textSize="20sp"
        android:layout_marginEnd="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ml_p_email"
        android:layout_below="@id/ml_disease"
        android:text="@string/patient_email"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ml_d_email"
        android:layout_below="@id/ml_date"
        android:text="@string/doctor_email"
        android:textSize="20sp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ml_d_email"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/symptoms"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medicine"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/ml_sym"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/ml_meds"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
