<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:id="@+id/change_password_title"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/change_password_title"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/old_password"
        android:textSize="30sp"
        android:id="@+id/oldPass"
        android:inputType="textPassword"
        android:importantForAutofill="no"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/oldPass"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:id="@+id/newPass"
        android:importantForAutofill="no"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_below="@id/newPass"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:id="@+id/cp_submit"/>

</RelativeLayout>