<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/personal_info"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:id="@+id/pi_title"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/name"
            android:layout_below="@+id/pi_title"
            android:id="@+id/pi_name"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_title"
            android:id="@+id/pi_fname"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/address"
            android:layout_below="@+id/pi_fname"
            android:id="@+id/pi_address"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_fname"
            android:id="@+id/pi_address1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/phone_number"
            android:layout_below="@+id/pi_address"
            android:id="@+id/pi_number"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_address"
            android:id="@+id/pi_pnum"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/specialization"
            android:layout_below="@+id/pi_pnum"
            android:id="@+id/pi_spe"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_pnum"
            android:id="@+id/pi_spec"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_spe"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/height"
            android:layout_below="@+id/pi_pnum"
            android:id="@+id/pi_height"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_pnum"
            android:id="@+id/pi_height1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/weight"
            android:layout_below="@+id/pi_height"
            android:id="@+id/pi_weight"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_height"
            android:id="@+id/pi_weight1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/bmi"
            android:layout_below="@+id/pi_weight"
            android:id="@+id/pi_bmi"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/pi_weight1"
            android:id="@+id/pi_bmi1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_toEndOf="@+id/pi_name"/>





    </RelativeLayout>

</FrameLayout>